--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "gh-pages": "^6.1.1",
     "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1"
   }
